# WoodWorks_Ai

./: .env.example  .gitignore  README.md  Task_Document.txt  app.py  langgraph.json  pyproject.toml  requirements.txt
agents/: discount.py  human_spec.py  intent_decider.py  pricing.py  product_selector.py  prompt_loader.py  supervisor.py  technical_spec.py  user_info.py
agents/agent_1_user/: __init__.py  agent.py  schema.py
agents/agent_2_product/: __init__.py  agent.py  schema.py
agents/agent_3_human_requirements/: __init__.py  agent.py
agents/agent_4_tech_spec/: __init__.py  agent.py  schema.py
agents/chat_subgraph/: data_retrieval.py  query_refinement.py  reasoning.py  response_generator.py  store_chat_summary.py
app/: settings.py
app_log/: __init__.py  logger.py
config/: logging_config.py  settings.py
database/: models.py  seed_data.py  session.py  setup_db.py
graph/: builder.py  state.py
graph/nodes/: create_order.py  final_confirmation.py  (+2 more)
llm/: groq_client.py  vision_client.py
memory/: long_term.py  short_term.py
notebooks/: 1_Agents_Testing.ipynb
prompts/: chat.txt  human_spec_extraction.txt  human_spec_questions.txt  image_analysis.txt  intent_decider.txt  pricing.txt  product_selector.txt  query_refinement.txt  supervisor.txt  technical_spec.txt  user_info.txt
schemas/: __init__.py  agent_state.py  state_schema.py
scripts/: init_db.py  seed_products.py
supervisor/: permissions.py  state_router.py  supervisor.py  transition_rules.py
tools/: db_tools.py  fulfillment_tools.py  image_search.py  order_tools.py  pdf_generator.py
(+26 files in other folders)
