[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woodworks_ai"
version = "0.1.0"
dependencies = [
    "streamlit>=1.32.0",
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "groq>=0.4.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "reportlab>=4.0.0",
    "python-dotenv>=1.0.0"
]
